fixed section divider overflow issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,14 +83,14 @@ a:visited { color: inherit; }
 }
 
 .section-divider-top {
-  width: 100vw;
+  max-width: 100vw;
   height: 4vh;
   clip-path: polygon(0 0,100% 0,100% calc(100% - 50px),calc(50% + 50.00px) calc(100% - 50px),50% 100%,calc(50% - 50.00px) calc(100% - 50px),0 calc(100% - 50px));
   background-color: var(--nav-font-color);
 }
 
 .section-divider-bottom {
-  width: 100vw;
+  max-width: 100vw;
   height: 2vh;
   clip-path: polygon(0 0,calc(50% - 4.14px - 50.00px) 0,50% calc(50px + 4.14px),calc(50% + 4.14px + 50.00px) 0,100% 0,100% 100%,0 100%);
   background-color: var(--hover-effect-color);
